# Datos-ll-Proyecto-2

./: CMakeLists.txt  README.md  algoritmoGenetico.cpp  algoritmoGenetico.h  cargarImagen.cpp  cargarImagen.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
